Make sure jumbotron is centred on smaller viewports

--- a/src/homepage/styles.css
+++ b/src/homepage/styles.css
@@ -68,7 +68,6 @@
 /* Jumbotron */
 
 .jumbotron {
-  width: 100%;
   padding: 64px 0 32px;
   max-width: 1280px;
   margin: 0 auto;
